force-app/main/default/objects/WorkType/WorkType.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>