force-app/main/default/objects/WorkType/fields/Couleur_du_diagramme_GANTT__c.field-meta.xml
<CustomField>
    <fullName>Couleur_du_diagramme_GANTT__c</fullName>
    <description>Détermine la couleur qui apparaîtra sur le diagramme de GANTT.</description>
    <label>Couleur du diagramme GANTT</label>
    <length>7</length>
    <type>Text</type>
</CustomField>