force-app/main/default/objects/WorkType/fields/WT_Code_frais_generaux__c.field-meta.xml
<CustomField>
    <fullName>WT_Code_frais_generaux__c</fullName>
    <label>Code frais généraux</label>
    <length>4</length>
    <type>Text</type>
</CustomField>