force-app/main/default/objects/WorkType/fields/WT_CodePays__c.field-meta.xml
<CustomField>
    <fullName>WT_CodePays__c</fullName>
    <label>Code Pays</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FRA</fullName>
                <default>true</default>
                <label>FRA</label>
            </value>
            <value>
                <fullName>ITA</fullName>
            </value>
            <value>
                <fullName>GBR</fullName>
            </value>
            <value>
                <fullName>ESP</fullName>
            </value>
            <value>
                <fullName>PRT</fullName>
            </value>
            <value>
                <fullName>POL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>