force-app/main/default/objects/WorkType/fields/WT_NumeroDuTypeDeTravail__c.field-meta.xml
<CustomField>
    <fullName>WT_NumeroDuTypeDeTravail__c</fullName>
    <defaultValue>&quot;WT-00&quot;</defaultValue>
    <description>Numéro auto permettant d&apos;identifier le type de travail par une clef unique.</description>
    <externalId>true</externalId>
    <inlineHelpText>Clef unique pour identifier le type de travail</inlineHelpText>
    <label>Numéro du type de travail</label>
    <length>20</length>
    <type>Text</type>
</CustomField>