force-app/main/default/objects/WorkType/fields/WT_PlusieursJours__c.field-meta.xml
<CustomField>
    <fullName>WT_PlusieursJours__c</fullName>
    <label>Plusieurs jours</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>