force-app/main/default/objects/WorkType/fields/WT_Priorite__c.field-meta.xml
<CustomField>
    <fullName>WT_Priorite__c</fullName>
    <label>Priorité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basse</fullName>
                <default>true</default>
                <label>Basse</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Haute</fullName>
            </value>
            <value>
                <fullName>Critique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>