force-app/main/default/objects/WorkType/fields/WT_TypeDEnregistrementWO__c.field-meta.xml
<CustomField>
    <fullName>WT_TypeDEnregistrementWO__c</fullName>
    <label>Type d&apos;enregistrement WO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
                <label>A - Rapport simple</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Autres Interventions</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>SVAEC Chaudière eau chaude</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>SVAFT Chaudière fluide thermique</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>SVAIN Incinex</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>SVAREMTF Chaudière vapeur tubes de fumées</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>SVATA Traitement d&apos;air</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>SVATF Chaudière vapeur tubes de fumées</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>SVAVI Chaudière vapeur instantanée</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>SVM Chaudière eau chaude</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>SVM Chaudière fluide thermique</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>SVM Chaudière vapeur instantanée</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>SVM Chaudière vapeur tube de fumée</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>SVM Incinex</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>SVM Traitement d&apos;air</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>SVNFE Tests Securité</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>SVP Traitement d&apos;eau</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>SVREMIN Incinex</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>SVREMTF Chaudière tubes de fumées</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>