force-app/main/default/objects/WorkType/validationRules/Type_de_Travail_Test_pas_de_modif.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_de_Travail_Test_pas_de_modif</fullName>
    <active>true</active>
    <errorConditionFormula>AND (NOT(ISNEW()), $Profile.Name &lt;&gt; &apos;Administrateur système&apos;)</errorConditionFormula>
    <errorMessage>Privilèges insuffisants pour modifier un type de travail</errorMessage>
</ValidationRule>