force-app/main/default/objects/WorkType/listViews/All_WorkTypes.listView-meta.xml
<ListView>
    <fullName>All_WorkTypes</fullName>
    <columns>Name</columns>
    <columns>WT_NumeroDuTypeDeTravail__c</columns>
    <columns>WT_CodePays__c</columns>
    <columns>WT_Priorite__c</columns>
    <columns>EstimatedDuration</columns>
    <columns>DurationType</columns>
    <columns>ShouldAutoCreateSvcAppt</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name</field>
        <operation>notContain</operation>
        <value>x-</value>
    </filters>
    <label>Tous les types de travail</label>
</ListView>