force-app/main/default/objects/WorkType/listViews/WT_Frais_Generaux.listView-meta.xml
<ListView>
    <fullName>WT_Frais_Generaux</fullName>
    <columns>WT_NumeroDuTypeDeTravail__c</columns>
    <columns>Name</columns>
    <columns>WT_Code_frais_generaux__c</columns>
    <columns>EstimatedDuration</columns>
    <columns>DurationType</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WT_Code_frais_generaux__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Frais Généraux</label>
</ListView>